# PositronSource

./: .gitignore  CMakeLists.txt  G4_scan.sh  G4_scan_GT.sh  G4_scan_conventional.sh  G4_scan_crystalline.sh  LICENSE  README.md  execute.sh  positronSource.cc
analysis_scripts/: G4_channeling_utils.py  G4_read_output_files.py  G4_utils.py  PS_G4_file_analysis.ipynb  PS_G4_results_plot.ipynb  PS_comapre_axial_random.ipynb  PS_counts_multiple_runs.ipynb  PS_multiple_G4_files_analysis.py  PS_results_analysis.ipynb  plot_settings.py
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  FileReader.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  Run.hh  RunAction.hh  RunActionMessenger.hh  SensitiveDetector.hh  SensitiveDetectorHit.hh  SteppingAction.hh  VoxelScorer.hh
macros/: beam.mac  beam_6GeV.mac  beam_mu.mac  geom.mac  gui.mac  run.mac  run_FS.mac  run_FS_GT.mac  run_FS_crystalline.mac  run_FS_hybrid.mac  run_conventional.mac  setPrimaryBeam.mac  test.mac  vis.mac
processes_OC_FS/include/: G4BaierKatkov.hh  G4ChannelingFastSimCrystalData.hh  G4ChannelingFastSimModel.hh  G4CoherentPairProduction.hh  G4CoherentPairProductionPhysics.hh  G4VChannelingFastSimCrystalData.hh
processes_OC_FS/src/: G4BaierKatkov.cc  G4ChannelingFastSimCrystalData.cc  G4ChannelingFastSimModel.cc  G4CoherentPairProduction.cc  G4CoherentPairProductionPhysics.cc  G4VChannelingFastSimCrystalData.cc
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  FileReader.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  Run.cc  RunAction.cc  RunActionMessenger.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc  SteppingAction.cc  VoxelScorer.cc
